--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    Telegram\Bot\Api:
+        arguments:
+            $token: '%env(BOT_TOKEN_ENV_NAME)%'
